feat(static-data): make XML entry counting optional