@@ -16,15 +16,14 @@
  */
 package com.aionemu.gameserver.ai2;
 
+import lombok.extern.slf4j.Slf4j;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.concurrent.CountDownLatch;
 
-import org.apache.commons.lang.StringUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.ObjectProvider;
 
 import com.aionemu.commons.scripting.classlistener.AggregatedClassListener;
@@ -42,10 +41,10 @@ import com.aionemu.gameserver.model.templates.npc.NpcTemplate;
 /**
  * @author ATracer
  */
+@Slf4j
 public class AI2Engine implements GameEngine {
 
 	private static volatile ObjectProvider<AI2Engine> instanceProvider;
-	private static final Logger log = LoggerFactory.getLogger(AI2Engine.class);
 	private final Map<String, Class<? extends AbstractAI>> aiMap = new HashMap<String, Class<? extends AbstractAI>>();
 
 	@Override
@@ -86,7 +85,7 @@ public class AI2Engine implements GameEngine {
 	public final AI2 setupAI(String name, Creature owner) {
 		AbstractAI aiInstance = null;
 		try {
-			aiInstance = aiMap.get(name).newInstance();
+			aiInstance = aiMap.get(name).getDeclaredConstructor().newInstance();
 			aiInstance.setOwner(owner);
 			owner.setAi2(aiInstance);
 			if (AIConfig.ONCREATE_DEBUG) {
@@ -108,7 +107,7 @@ public class AI2Engine implements GameEngine {
 
 	private void validateScripts() {
 		Collection<String> npcAINames = new HashSet<String>();
-		for (NpcTemplate npcTemplate : DataManager.NPC_DATA.getNpcData().valueCollection()) {
+		for (NpcTemplate npcTemplate : DataManager.NPC_DATA.getNpcData().values()) {
 			npcAINames.add(npcTemplate.getAi());
 		}
 		npcAINames.removeAll(aiMap.keySet());
